Fix spacing of logo and phone number in collapsed header

--- a/assets/src/less/header.less
+++ b/assets/src/less/header.less
@@ -34,6 +34,7 @@
 			display: block;
 			height: 46px;
 			margin-top: 2px;
+			margin-bottom: 2px;
 			max-height: 50px;
 			max-width: 200px;
 		}
@@ -55,6 +56,8 @@
 	}
 
 	.bp-contact-card {
+		padding-left: 0;
+		padding-right: 0;
 		background: transparent;
 		border: none;
 		color: @text-light;
